--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,7 +6,7 @@ phases:
     commands:
       - echo "Installing dependencies..."
       - npm install
-      - npm install -g @angular/cliu@latest
+      - npm install -g @angular/cli@latest
   build:
     commands:
       - echo "Building Angular Project..." 
