--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,7 +10,7 @@ phases:
   build:
     commands:
       - echo "Building Angular Project..." 
-      - ng build
+      - ng build my-aws-project
   post_build:
     commands:
       - echo "Updating files in the S3 bucket..."
