--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,4 +1,11 @@
 version: 0.2
+
+env:
+    variables:
+        CACHE_CONTROL: "86400"
+        S3_BUCKET: "{{s3_bucket_url}}"
+        BUILD_FOLDER: "dist"
+
 phases:
   install:
     runtime-versions:
@@ -11,7 +18,8 @@ phases:
     commands:
       - echo "Building Angular Project..." 
       - ng build
-  post_build:
-    commands:
-      - echo "Updating files in the S3 bucket..."
-      - aws s3 sync dist/my-aws-project/ s3://www.estelinasbuffet.com-bucket --delete
+artifacts:
+    files:
+        - '**/*'
+    base-directory: 'dist*'
+    discard-paths: yes
