--- a/angular.json
+++ b/angular.json
@@ -94,7 +94,7 @@
               "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
               "src/styles.css"
             ],
-            "scripts": ["../node_modules/jquery/dist/jquery.min.js" ]
+            "scripts": ["./node_modules/jquery/dist/jquery.min.js" ]
           }
         }
       }
